add external links

--- a/sources/pages/contact.html
+++ b/sources/pages/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Home</title>
-    <link rel="stylesheet" href="../styles/main.css" />
+    <link rel="stylesheet" href="https://web-labs-nine.vercel.app/sources/styles/main.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -21,15 +21,15 @@
         <h1>Lab1 html + css</h1>
         <nav>
           <ul>
-            <li><a href="index.html">home</a></li>
-            <li><a href="kpi.html">kpi</a></li>
-            <li><a href="about.html">about</a></li>
+            <li><a href="https://web-labs-nine.vercel.app/sources/pages/index.html">home</a></li>
+            <li><a href="https://web-labs-nine.vercel.app/sources/pages/kpi.html">kpi</a></li>
+            <li><a href="https://web-labs-nine.vercel.app/sources/pages/about.html">about</a></li>
             <li>
-              <a href="contact.html" style="text-decoration: underline"
+              <a href="https://web-labs-nine.vercel.app/sources/pages/contact.html" style="text-decoration: underline"
                 >contact</a
               >
             </li>
-            <li><a href="photo.html">photo</a></li>
+            <li><a href="https://web-labs-nine.vercel.app/sources/pages/photo.html">photo</a></li>
           </ul>
         </nav>
       </header>
