--- a/sources/pages/index.html
+++ b/sources/pages/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Home</title>
-    <link rel="stylesheet" href="../styles/main.css" />
+    <link rel="stylesheet" href="https://web-labs-nine.vercel.app/sources/styles/main.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -22,12 +22,12 @@
         <nav>
           <ul>
             <li>
-              <a href="index.html" style="text-decoration: underline">home</a>
+              <a href="https://web-labs-nine.vercel.app/sources/pages/index.html" style="text-decoration: underline">home</a>
             </li>
-            <li><a href="kpi.html">kpi</a></li>
-            <li><a href="about.html">about</a></li>
-            <li><a href="contact.html">contact</a></li>
-            <li><a href="photo.html">photo</a></li>
+            <li><a href="https://web-labs-nine.vercel.app/sources/pages/kpi.html">kpi</a></li>
+            <li><a href="https://web-labs-nine.vercel.app/sources/pages/about.html">about</a></li>
+            <li><a href="https://web-labs-nine.vercel.app/sources/pages/contact.html">contact</a></li>
+            <li><a href="https://web-labs-nine.vercel.app/sources/pages/photo.html">photo</a></li>
           </ul>
         </nav>
       </header>
@@ -59,7 +59,7 @@
           />
         </map>
         <img
-          src="../images/map.jpg"
+          src="https://web-labs-nine.vercel.app/sources/images/map.jpg"
           alt="map"
           usemap="#nav-map"
           width="286px"
