--- a/sources/pages/photo.html
+++ b/sources/pages/photo.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Home</title>
-    <link rel="stylesheet" href="../styles/main.css" />
+    <link rel="stylesheet" href="https://web-labs-nine.vercel.app/sources/styles/main.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -21,18 +21,18 @@
         <h1>Lab1 html + css</h1>
         <nav>
           <ul>
-            <li><a href="index.html">home</a></li>
-            <li><a href="kpi.html">kpi</a></li>
-            <li><a href="about.html">about</a></li>
-            <li><a href="contact.html">contact</a></li>
+            <li><a href="https://web-labs-nine.vercel.app/sources/pages/index.html">home</a></li>
+            <li><a href="https://web-labs-nine.vercel.app/sources/pages/kpi.html">kpi</a></li>
+            <li><a href="https://web-labs-nine.vercel.app/sources/pages/about.html">about</a></li>
+            <li><a href="https://web-labs-nine.vercel.app/sources/pages/contact.html">contact</a></li>
             <li>
-              <a href="photo.html" style="text-decoration: underline">photo</a>
+              <a href="https://web-labs-nine.vercel.app/sources/pages/photo.html" style="text-decoration: underline">photo</a>
             </li>
           </ul>
         </nav>
       </header>
       <main class="main-content">
-        <img src="../images/belka.jpg" alt="belka" width="100%" />
+        <img src="https://web-labs-nine.vercel.app/sources/images/belka.jpg" alt="belka" width="100%" />
       </main>
       <footer class="content-footer">
         <span
