--- a/sources/contact.html
+++ b/sources/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Home</title>
-    <link rel="stylesheet" href="../styles/main.css" />
+    <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
     <div class="sidebar-content">
@@ -20,25 +20,27 @@
       <h1>Lab1 html + css</h1>
       <nav>
         <ul>
-          <li><a href="../index.html">home</a></li>
+          <li><a href="index.html">home</a></li>
           <li><a href="kpi.html">kpi</a></li>
+          <li><a href="about.html">about</a></li>
           <li>
-            <a href="about.html" style="text-decoration: underline">about</a>
+            <a href="contact.html" style="text-decoration: underline"
+              >contact</a
+            >
           </li>
-          <li><a href="contact.html">contact</a></li>
           <li><a href="photo.html">photo</a></li>
         </ul>
       </nav>
     </header>
     <main class="main-content">
-      <h2>Some info:</h2>
-      <ol>
-        <li>Lorem</li>
-        <li>ipsum</li>
-        <li>dolor</li>
-        <li>sit</li>
-        <li>amet</li>
-      </ol>
+      <h2>Contact us</h2>
+      <ul>
+        <li>+38000</li>
+        <li>kpi@gmail.com</li>
+        <li>Politechnicha 5</li>
+        <li>96 Road</li>
+        <li>BakerStreet</li>
+      </ul>
     </main>
     <footer class="content-footer">
       <span
