--- a/sources/index.html
+++ b/sources/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Home</title>
-    <link rel="stylesheet" href="../sources/styles/main.css" />
+    <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
     <div class="sidebar-content">
@@ -23,10 +23,10 @@
           <li>
             <a href="index.html" style="text-decoration: underline">home</a>
           </li>
-          <li><a href="pages/kpi.html">kpi</a></li>
-          <li><a href="pages/about.html">about</a></li>
-          <li><a href="pages/contact.html">contact</a></li>
-          <li><a href="pages/photo.html">photo</a></li>
+          <li><a href="kpi.html">kpi</a></li>
+          <li><a href="about.html">about</a></li>
+          <li><a href="contact.html">contact</a></li>
+          <li><a href="photo.html">photo</a></li>
         </ul>
       </nav>
     </header>
@@ -35,25 +35,25 @@
         <area
           shape="rect"
           coords="40,40,110,100"
-          href="pages/about.html"
+          href="about.html"
           alt="home"
         />
         <area
           shape="rect"
           coords="40,130,140,220"
-          href="pages/kpi.html"
+          href="kpi.html"
           alt="about"
         />
         <area
           shape="rect"
           coords="150,180,220, 260"
-          href="pages/contact.html"
+          href="contact.html"
           alt="contact"
         />
         <area
           shape="rect"
           coords="200,70,310, 170"
-          href="pages/photo.html"
+          href="photo.html"
           alt="photo"
         />
       </map>
