--- a/sources/kpi.html
+++ b/sources/kpi.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Home</title>
-    <link rel="stylesheet" href="../styles/main.css" />
+    <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
     <div class="sidebar-content">
@@ -20,7 +20,7 @@
       <h1>Lab1 html + css</h1>
       <nav>
         <ul>
-          <li><a href="../index.html">home</a></li>
+          <li><a href="index.html">home</a></li>
           <li>
             <a href="kpi.html" style="text-decoration: underline">kpi</a>
           </li>
