--- a/sources/index.html
+++ b/sources/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Home</title>
-    <link rel="stylesheet" href="/sources/styles/main.css" />
+    <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
     <div class="sidebar-content">
@@ -21,14 +21,12 @@
       <nav>
         <ul>
           <li>
-            <a href="/sources/index.html" style="text-decoration: underline"
-              >home</a
-            >
+            <a href="index.html" style="text-decoration: underline">home</a>
           </li>
-          <li><a href="/sources/kpi.html">kpi</a></li>
-          <li><a href="/sources/about.html">about</a></li>
-          <li><a href="/sources/contact.html">contact</a></li>
-          <li><a href="/sources/photo.html">photo</a></li>
+          <li><a href="kpi.html">kpi</a></li>
+          <li><a href="about.html">about</a></li>
+          <li><a href="contact.html">contact</a></li>
+          <li><a href="photo.html">photo</a></li>
         </ul>
       </nav>
     </header>
@@ -37,30 +35,30 @@
         <area
           shape="rect"
           coords="40,40,110,100"
-          href="/sources/about.html"
+          href="about.html"
           alt="home"
         />
         <area
           shape="rect"
           coords="40,130,140,220"
-          href="/sources/kpi.html"
+          href="kpi.html"
           alt="about"
         />
         <area
           shape="rect"
           coords="150,180,220, 260"
-          href="/sources/contact.html"
+          href="contact.html"
           alt="contact"
         />
         <area
           shape="rect"
           coords="200,70,310, 170"
-          href="/sources/photo.html"
+          href="photo.html"
           alt="photo"
         />
       </map>
       <img
-        src="/sources/images/map.jpg"
+        src="images/map.jpg"
         alt="map"
         usemap="#nav-map"
         width="286px"
