--- a/sources/photo.html
+++ b/sources/photo.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Home</title>
-    <link rel="stylesheet" href="/sources/styles/main.css" />
+    <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
     <div class="sidebar-content">
@@ -20,14 +20,12 @@
       <h1>Lab1 html + css</h1>
       <nav>
         <ul>
-          <li><a href="/sources/index.html">home</a></li>
-          <li><a href="/sources/kpi.html">kpi</a></li>
-          <li><a href="/sources/about.html">about</a></li>
-          <li><a href="/sources/contact.html">contact</a></li>
+          <li><a href="index.html">home</a></li>
+          <li><a href="kpi.html">kpi</a></li>
+          <li><a href="about.html">about</a></li>
+          <li><a href="contact.html">contact</a></li>
           <li>
-            <a
-              href="/sources/images/photo.html"
-              style="text-decoration: underline"
+            <a href="images/photo.html" style="text-decoration: underline"
               >photo</a
             >
           </li>
@@ -35,7 +33,7 @@
       </nav>
     </header>
     <main class="main-content">
-      <img src="/sources/images/belka.jpg" alt="belka" width="100%" />
+      <img src="images/belka.jpg" alt="belka" width="100%" />
     </main>
     <footer class="content-footer">
       <span
