--- a/sources/about.html
+++ b/sources/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Home</title>
-    <link rel="stylesheet" href="/styles/main.css" />
+    <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
     <div class="sidebar-content">
@@ -20,15 +20,13 @@
       <h1>Lab1 html + css</h1>
       <nav>
         <ul>
-          <li><a href="/index.html">home</a></li>
-          <li><a href="/kpi.html">kpi</a></li>
+          <li><a href="index.html">home</a></li>
+          <li><a href="kpi.html">kpi</a></li>
           <li>
-            <a href="/about.html" style="text-decoration: underline"
-              >about</a
-            >
+            <a href="about.html" style="text-decoration: underline">about</a>
           </li>
-          <li><a href="/contact.html">contact</a></li>
-          <li><a href="/photo.html">photo</a></li>
+          <li><a href="contact.html">contact</a></li>
+          <li><a href="photo.html">photo</a></li>
         </ul>
       </nav>
     </header>
