--- a/sources/contact.html
+++ b/sources/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Home</title>
-    <link rel="stylesheet" href="/sources/styles/main.css" />
+    <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
     <div class="sidebar-content">
@@ -20,15 +20,15 @@
       <h1>Lab1 html + css</h1>
       <nav>
         <ul>
-          <li><a href="/sources/index.html">home</a></li>
-          <li><a href="/sources/kpi.html">kpi</a></li>
-          <li><a href="/sources/about.html">about</a></li>
+          <li><a href="index.html">home</a></li>
+          <li><a href="kpi.html">kpi</a></li>
+          <li><a href="about.html">about</a></li>
           <li>
-            <a href="/sources/contact.html" style="text-decoration: underline"
+            <a href="contact.html" style="text-decoration: underline"
               >contact</a
             >
           </li>
-          <li><a href="/sources/photo.html">photo</a></li>
+          <li><a href="photo.html">photo</a></li>
         </ul>
       </nav>
     </header>
