--- a/sources/lab1/about.html
+++ b/sources/lab1/about.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Home</title>
-    <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" href="/lab1/styles/main.css" />
   </head>
   <body>
     <div class="sidebar-content">
@@ -20,29 +21,29 @@
       <h1>Lab1 html + css</h1>
       <nav>
         <ul>
-          <li><a href="index.html">home</a></li>
-          <li><a href="kpi.html">kpi</a></li>
-          <li><a href="about.html">about</a></li>
+          <li><a href="/lab1/index.html">home</a></li>
+          <li><a href="/lab1/kpi.html">kpi</a></li>
           <li>
-            <a href="contact.html" style="text-decoration: underline"
-              >contact</a
+            <a href="/lab1/about.html" style="text-decoration: underline"
+              >about</a
             >
           </li>
-          <li><a href="photo.html">photo</a></li>
+          <li><a href="/lab1/contact.html">contact</a></li>
+          <li><a href="/lab1/photo.html">photo</a></li>
         </ul>
       </nav>
     </header>
     <main class="main-content">
-      <h2>Contact us</h2>
-      <ul>
-        <li>+38000</li>
-        <li>kpi@gmail.com</li>
-        <li>Politechnicha 5</li>
-        <li>96 Road</li>
-        <li>BakerStreet</li>
-      </ul>
+      <h2>Some info:</h2>
+      <ol>
+        <li>Lorem</li>
+        <li>ipsum</li>
+        <li>dolor</li>
+        <li>sit</li>
+        <li>amet</li>
+      </ol>
     </main>
-    <footer class="content-footer">
+    <footer>
       <span
         >Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat quidem
         eaque repudiandae veritatis, nostrum ad necessitatibus nisi repellendus
