--- a/sources/lab1/contact.html
+++ b/sources/lab1/contact.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Home</title>
     <link rel="stylesheet" href="styles/main.css" />
   </head>
@@ -23,19 +24,26 @@
           <li><a href="index.html">home</a></li>
           <li><a href="kpi.html">kpi</a></li>
           <li><a href="about.html">about</a></li>
-          <li><a href="contact.html">contact</a></li>
           <li>
-            <a href="images/photo.html" style="text-decoration: underline"
-              >photo</a
+            <a href="contact.html" style="text-decoration: underline"
+              >contact</a
             >
           </li>
+          <li><a href="photo.html">photo</a></li>
         </ul>
       </nav>
     </header>
     <main class="main-content">
-      <img src="images/belka.jpg" alt="belka" width="100%" />
+      <h2>Contact us</h2>
+      <ul>
+        <li>+38000</li>
+        <li>kpi@gmail.com</li>
+        <li>Politechnicha 5</li>
+        <li>96 Road</li>
+        <li>BakerStreet</li>
+      </ul>
     </main>
-    <footer class="content-footer">
+    <footer>
       <span
         >Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat quidem
         eaque repudiandae veritatis, nostrum ad necessitatibus nisi repellendus
