--- a/sources/lab1/index.html
+++ b/sources/lab1/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Home</title>
-    <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" href="/lab1/styles/main.css" />
   </head>
   <body>
     <div class="sidebar-content">
@@ -21,12 +22,14 @@
       <nav>
         <ul>
           <li>
-            <a href="index.html" style="text-decoration: underline">home</a>
+            <a href="/lab1/index.html" style="text-decoration: underline"
+              >home</a
+            >
           </li>
-          <li><a href="kpi.html">kpi</a></li>
-          <li><a href="about.html">about</a></li>
-          <li><a href="contact.html">contact</a></li>
-          <li><a href="photo.html">photo</a></li>
+          <li><a href="/lab1/kpi.html">kpi</a></li>
+          <li><a href="/lab1/about.html">about</a></li>
+          <li><a href="/lab1/contact.html">contact</a></li>
+          <li><a href="/lab1/photo.html">photo</a></li>
         </ul>
       </nav>
     </header>
@@ -35,30 +38,30 @@
         <area
           shape="rect"
           coords="40,40,110,100"
-          href="about.html"
+          href="/lab1/about.html"
           alt="home"
         />
         <area
           shape="rect"
           coords="40,130,140,220"
-          href="kpi.html"
+          href="/lab1/kpi.html"
           alt="about"
         />
         <area
           shape="rect"
           coords="150,180,220, 260"
-          href="contact.html"
+          href="/lab1/contact.html"
           alt="contact"
         />
         <area
           shape="rect"
           coords="200,70,310, 170"
-          href="photo.html"
+          href="/lab1/photo.html"
           alt="photo"
         />
       </map>
       <img
-        src="images/map.jpg"
+        src="/lab1/images/map.jpg"
         alt="map"
         usemap="#nav-map"
         width="286px"
@@ -225,7 +228,7 @@
       architecto maiores, ipsam in provident magnam expedita eveniet neque,
       impedit incidunt placeat laborum velit?
     </main>
-    <footer class="content-footer">
+    <footer>
       <span
         >Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat quidem
         eaque repudiandae veritatis, nostrum ad necessitatibus nisi repellendus
