--- a/sources/lab1/photo.html
+++ b/sources/lab1/photo.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Home</title>
-    <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" href="/lab1/styles/main.css" />
   </head>
   <body>
     <div class="sidebar-content">
@@ -20,20 +21,22 @@
       <h1>Lab1 html + css</h1>
       <nav>
         <ul>
-          <li><a href="index.html">home</a></li>
+          <li><a href="/lab1/index.html">home</a></li>
+          <li><a href="/lab1/kpi.html">kpi</a></li>
+          <li><a href="/lab1/about.html">about</a></li>
+          <li><a href="/lab1/contact.html">contact</a></li>
           <li>
-            <a href="kpi.html" style="text-decoration: underline">kpi</a>
+            <a href="/lab1/images/photo.html" style="text-decoration: underline"
+              >photo</a
+            >
           </li>
-          <li><a href="about.html">about</a></li>
-          <li><a href="contact.html">contact</a></li>
-          <li><a href="photo.html">photo</a></li>
         </ul>
       </nav>
     </header>
     <main class="main-content">
-      <h2><a href="https://kpi.ua/">Kpi website</a></h2>
+      <img src="/lab1/images/belka.jpg" alt="belka" width="100%" />
     </main>
-    <footer class="content-footer">
+    <footer>
       <span
         >Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat quidem
         eaque repudiandae veritatis, nostrum ad necessitatibus nisi repellendus
