--- a/sources/lab1/index.html
+++ b/sources/lab1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Home</title>
-    <link rel="stylesheet" href="/lab1/styles/main.css" />
+    <link rel="stylesheet" href="/styles/main.css" />
   </head>
   <body>
     <div class="sidebar-content">
@@ -22,14 +22,14 @@
       <nav>
         <ul>
           <li>
-            <a href="/lab1/index.html" style="text-decoration: underline"
+            <a href="/index.html" style="text-decoration: underline"
               >home</a
             >
           </li>
-          <li><a href="/lab1/kpi.html">kpi</a></li>
-          <li><a href="/lab1/about.html">about</a></li>
-          <li><a href="/lab1/contact.html">contact</a></li>
-          <li><a href="/lab1/photo.html">photo</a></li>
+          <li><a href="/kpi.html">kpi</a></li>
+          <li><a href="/about.html">about</a></li>
+          <li><a href="/contact.html">contact</a></li>
+          <li><a href="/photo.html">photo</a></li>
         </ul>
       </nav>
     </header>
@@ -38,30 +38,30 @@
         <area
           shape="rect"
           coords="40,40,110,100"
-          href="/lab1/about.html"
+          href="/about.html"
           alt="home"
         />
         <area
           shape="rect"
           coords="40,130,140,220"
-          href="/lab1/kpi.html"
+          href="/kpi.html"
           alt="about"
         />
         <area
           shape="rect"
           coords="150,180,220, 260"
-          href="/lab1/contact.html"
+          href="/contact.html"
           alt="contact"
         />
         <area
           shape="rect"
           coords="200,70,310, 170"
-          href="/lab1/photo.html"
+          href="/photo.html"
           alt="photo"
         />
       </map>
       <img
-        src="/lab1/images/map.jpg"
+        src="/images/map.jpg"
         alt="map"
         usemap="#nav-map"
         width="286px"
