--- a/sources/lab1/photo.html
+++ b/sources/lab1/photo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Home</title>
-    <link rel="stylesheet" href="/lab1/styles/main.css" />
+    <link rel="stylesheet" href="/styles/main.css" />
   </head>
   <body>
     <div class="sidebar-content">
@@ -21,12 +21,12 @@
       <h1>Lab1 html + css</h1>
       <nav>
         <ul>
-          <li><a href="/lab1/index.html">home</a></li>
-          <li><a href="/lab1/kpi.html">kpi</a></li>
-          <li><a href="/lab1/about.html">about</a></li>
-          <li><a href="/lab1/contact.html">contact</a></li>
+          <li><a href="/index.html">home</a></li>
+          <li><a href="/kpi.html">kpi</a></li>
+          <li><a href="/about.html">about</a></li>
+          <li><a href="/contact.html">contact</a></li>
           <li>
-            <a href="/lab1/images/photo.html" style="text-decoration: underline"
+            <a href="/images/photo.html" style="text-decoration: underline"
               >photo</a
             >
           </li>
@@ -34,7 +34,7 @@
       </nav>
     </header>
     <main class="main-content">
-      <img src="/lab1/images/belka.jpg" alt="belka" width="100%" />
+      <img src="/images/belka.jpg" alt="belka" width="100%" />
     </main>
     <footer>
       <span
