--- a/sources/lab1/about.html
+++ b/sources/lab1/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Home</title>
-    <link rel="stylesheet" href="/lab1/styles/main.css" />
+    <link rel="stylesheet" href="/styles/main.css" />
   </head>
   <body>
     <div class="sidebar-content">
@@ -21,15 +21,15 @@
       <h1>Lab1 html + css</h1>
       <nav>
         <ul>
-          <li><a href="/lab1/index.html">home</a></li>
-          <li><a href="/lab1/kpi.html">kpi</a></li>
+          <li><a href="/index.html">home</a></li>
+          <li><a href="/kpi.html">kpi</a></li>
           <li>
-            <a href="/lab1/about.html" style="text-decoration: underline"
+            <a href="/about.html" style="text-decoration: underline"
               >about</a
             >
           </li>
-          <li><a href="/lab1/contact.html">contact</a></li>
-          <li><a href="/lab1/photo.html">photo</a></li>
+          <li><a href="/contact.html">contact</a></li>
+          <li><a href="/photo.html">photo</a></li>
         </ul>
       </nav>
     </header>
