--- a/sources/lab1/about.html
+++ b/sources/lab1/about.html
@@ -24,9 +24,7 @@
           <li><a href="/index.html">home</a></li>
           <li><a href="/kpi.html">kpi</a></li>
           <li>
-            <a href="/about.html" style="text-decoration: underline"
-              >about</a
-            >
+            <a href="/about.html" style="text-decoration: underline">about</a>
           </li>
           <li><a href="/contact.html">contact</a></li>
           <li><a href="/photo.html">photo</a></li>
