--- a/sources/lab1/index.html
+++ b/sources/lab1/index.html
@@ -22,9 +22,7 @@
       <nav>
         <ul>
           <li>
-            <a href="/index.html" style="text-decoration: underline"
-              >home</a
-            >
+            <a href="/index.html" style="text-decoration: underline">home</a>
           </li>
           <li><a href="/kpi.html">kpi</a></li>
           <li><a href="/about.html">about</a></li>
